# diatomic-molecule-simulation-widget

./: .gitignore  README.md  assignment_copy_paste.md  error_handling_plan.md  how_to_wasm_rust_ts.txt  index.html  package-lock.json  package.json  project_directory_structure.md  tsconfig.json
src/: index.ts  style.css
wasm-crate/: Cargo.toml
wasm-crate/src/: lib.rs  plt.rs  sim.rs
