[package]
name = "diatomic-molecule-simulation-widget"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
plotters = "0.3.3"
plotters-canvas = "^0.3.0"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }

